social fix on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -384,7 +384,7 @@ figure.effect-lily figcaption > div {
 #social { 
     position: relative;
     display: block;
-    width: 35%;
+    width: 40%;
     margin: 0 auto;
 } 
 
